src/test/ui/suggestions/pub-ident-fn-2.stderr
error: missing `fn` for method definition
  --> $DIR/pub-ident-fn-2.rs:11:4
   |
LL | pub foo(s: usize) { bar() }
   |    ^
help: add `fn` here to parse `foo` as a public method
   |
LL | pub fn foo(s: usize) { bar() }
   |     ^^

error: aborting due to previous error

